samples/_failures_safe/1761318395_a8f12d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b83aa96c.c: In function ‘main’:
./samples/SAFE/__tmp_b83aa96c.c:160:66: error: expected ‘)’ at end of input
  160 |     printf("Final state: %s\n", state_to_string(sm->current_state
      |                                                ~                 ^
      |                                                                  )
./samples/SAFE/__tmp_b83aa96c.c:160:5: error: expected declaration or statement at end of input
  160 |     printf("Final state: %s\n", state_to_string(sm->current_state
      |     ^~~~~~
